--- a/paginas/pluton.html
+++ b/paginas/pluton.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- link de font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <!-- otro link de font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <!-- otro link de font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk&display=swap" rel="stylesheet">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- Animate on scroll CSS-->
@@ -47,16 +53,15 @@
                   <li class="nav-item">
                     <a class="nav-link " href="../paginas/astro101.html">Astro 101</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link " href="../paginas/blog.html">Blog</a>
-                  </li>
               </div>
             </div>
           </nav>
         </header>
       </div>
-<main><h1> #Serie: Conociendo de cerca, hoy Plutón.</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam minus iusto veritatis cumque sapiente dolores in a officia sed illo quam aperiam, totam est corporis cum dolorem quae ex? Deleniti?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, cupiditate blanditiis eaque nobis dolore soluta quo eligendi alias. Veritatis rem soluta delectus reiciendis temporibus explicabo et illo sit debitis impedit.</p>
+<main>
+  <h1> #Serie: Conociendo de cerca, Plutón.</h1>
+  <p>¡Hola no te desesperes, proximaménte estará disponible éste artículo!..</p>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </main>
 <footer>
         <div class="footer-contenedor">
