--- a/paginas/sobremi.html
+++ b/paginas/sobremi.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- link de font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <!-- otro link de font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <!-- otro link de font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk&display=swap" rel="stylesheet">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Sobre Mi</title>
@@ -42,9 +48,7 @@
                       <li class="nav-item">
                         <a class="nav-link " href="../paginas/astro101.html">Astro 101</a>
                       </li>
-                      <li class="nav-item">
-                        <a class="nav-link " href="../paginas/blog.html">Blog</a>
-                      </li>
+
                   </div>
                 </div>
               </nav>
@@ -62,7 +66,7 @@
             <p class="asc-geminis">Asc en Géminis</p>
         </div>
         <div id="historia-mia-id" class="historia-mia">
-          <h2 class="h2-historia"> Ponganse cómodoxs, que les cuento un poco de mi historia..</h2>
+          <h2 class="h2-historia"> Ponganse cómodxs, que les cuento un poco de mi historia..</h2>
           <p class="historia"> Nací el 23 de Junio de 1993, un día Miércoles, en la ciudad de Bahía Blanca, Provincia de Buenos Aires (Argentina). Desde muy chico me interesé en todas las cosas que se escapaban de la visión tradicional que tenian el resto de las personas sobre el mundo. Siempre sentía que habia algo mas alla de mi mismo, de todxs y que no se podían explicar ni razonar, pero estaba. Tengo el recuerdo de pasar horas leyendo libros que explicaban las energías que contenían los cuarzos, como podías conectarte con su esencia para recibir su información, como sentir su energía y como te potenciaba entrar en contacto con esa roca tan llena de vida. Mi infancia fue una experiencia muy linda, llena de constantes aventuras, amistadas, barrio, exploraciones por todos lados, vivía moviendome tanto, que cada dos por tres terminaba en el hospital con algun accidente. En mi familia también (sobre todo siguiendo la linea Materna, como buen Canceriano que soy) habia una cierta predisposición en ahondar los misterios de la vida, las energías que traemos, conectarse con planos que son muy sutiles para la percepción de todxs. Como podrán ver, lo que estoy haciendo ahora, ya venia sucediendo hace rato, nada mas que llegó en el momento que tenía que llegar, ni un minuto antes, ni un minuto después. Ahora de adulto, entre medio de un montón de crisis, muertes, renacimientos (sobre todo cuando empece a tener el retorno de Saturno), le quise dar forma a toda esta energía e infromación que me pedía salir por algún lado, tome fuerza y me anime a dar ese salto mas alla de mis propios límites, esos límites que a veces uno se pone para no tener que hacer los cambios, que en el fondo sabemos que son necesarios.  </p>
           <img id="foto-eric" class="imagen-eric" src="../img/Eric.png" alt="Foto de Eric">
           <h3 class="h3-astro">¿Por qué Astrología?</h3>
