--- a/paginas/talleres.html
+++ b/paginas/talleres.html
@@ -6,6 +6,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- link de font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <!-- otro link de font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <!-- otro link de font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk&display=swap" rel="stylesheet">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- link css-->
@@ -44,9 +50,6 @@
                   <li class="nav-item">
                     <a class="nav-link " href="../paginas/astro101.html">Astro 101</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link " href="../paginas/blog.html">Blog</a>
-                  </li>
               </div>
             </div>
           </nav>
@@ -55,31 +58,31 @@
       <!-- arranca el main------------>
 <main id="main-talleres-id" class="main-talleres">
    <div class="taller-luna">
-    <img src="" alt="">
     <div class="luna-titulo">
+      <img src="../img/intensamente.png" alt="">
       <h2 class="h2-luna"> Taller Luna Natal</h2>
-      <p class="p-luna">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio exercitationem nulla consequatur odio nostrum aut ratione repellendus dignissimos    voluptatibus eum pariatur consectetur, eos numquam architecto. Placeat quidem doloremque praesentium doloribus?</p>
+      <p class="p-luna">En éste taller online, abordaremos la función de la Luna en Astrología, en nuestra vida y en nuestra carta natal. Cuales son los patrones inconscientes que nos operan, como identificarlos y empezar a trabajar sobre ellos. Hablaremos de la Luna por Elemento, Signo y Casas. Una vez finalizado se llevarán la clase grabada, la guia en pdf con todas las lunas y un certificado de partipación a modo de recuerdo.</p>
     </div>
    </div>
    <div class="taller-ascendente">
-    <img src="" alt="">
     <div class="ascendente-titulo">
+      <img src="../img/cohete.png" alt="">
       <h2 class="h2-ascendente"> Taller Ascendente</h2>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis debitis incidunt ullam earum nemo saepe vero atque tempora esse sequi magnam, eligendi    quis, numquam alias asperiores dolore, pariatur quibusdam eveniet!</p>
+      <p>En éste taller online, hablaremos de nuestra misión en la vida, como se manifiesta a traves de nuestro Ascendente y que información tenemos que incorporar a nuestra vida para continunar con nuestro proceso de evolución. Vamos a profundizar en el Ascendente por elemento, signo y planetas regentes...</p>
     </div>
    </div>
    <div class="taller-marte">
-    <img src="" alt="">
     <div class="marte-titulo">
+      <img src="../img/ares.png" alt="">
       <h2 class="h2-marte"> Taller Marte Natal</h2>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur quas facilis laborum doloribus iste minus, dignissimos, optio adipisci quo, expedita    nihil necessitatibus cum provident tenetur voluptatum voluptatibus laudantium voluptas eos.</p>
+      <p>¿Qué pasa cuando no puedo ir por las cosas que quiero?. ¿Por qué siempre me encuentro frenadx al momento de tomar accón?. Si alguna de estas preguntas llamo tu atención, tal vez debas mirar este taller. Cuando hablamos de Marte en nuestra carta, hablamos de la fuerza y potencia para tomar acción y hacer que las cosas que queremos, sucedan. Pero..¿Qué pasa cuando nuestro Marte esta bloqueado?. En este taller vamos a apdender a idenfiticar como es nuestra manera de salir al mundo, de ir por lo que queremos, que necesita nuestro Marte para expresarse y que pasa cuando éste se encuentra apagado. ¿Cómo lo despertamos?..</p>
     </div>
    </div>
    <div class="taller-venus">
-    <img class="venus" src="../img/venus.png" alt="">
     <div class="venus-titulo">
+      <img src="../img/afrodita.png" alt="">
       <h2 class="h2-venus">Taller Venus Natal</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus rerum assumenda, nam eveniet amet quod eius neque suscipit minus veniam debitis    velit dicta sunt voluptatem modi dignissimos voluptates dolorem doloribus.</p>
+      <p>Afrodita, la diosa del amor y el deseo, representada por Venus en nuestra carta. Cuándo hablamos de relaciones vinculares es ella quien entra en juego, la que nos habla de como es mi vínculo con el otrx, que necesito yo para sentirme deseado y satisfecho a un nivel físico y energético, que cosas le estoy pidiendo a ese otrx que no me puedo pedir a mi mismx.¿Que pasa si empiezo a entender como son mis juegos vinculares?. El primer paso es cuestionarse. Cuando vemos los patrones que subyacen en mi, puedo elegir desde donde me voy a relacionar con otrxs y romper con las repeticiones.</p>
     </div>
    </div>
 </main>
