--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- link de font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital@1&display=swap" rel="stylesheet">
+    <!-- otro link de font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <!-- otro link de font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk&display=swap" rel="stylesheet">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- link css-->
@@ -41,9 +47,6 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link " href="paginas/astro101.html">Astro 101</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link " href="paginas/blog.html">Blog</a>
               </li>
           </div>
         </div>
@@ -85,8 +88,8 @@
         <li>Herramientas para el auto-cuidado (que te permitan expandirte y transformarte)</li>
       </ul>
     </div>
-    <a href=""> Informe Escrito</a>
-    <a href="">Servicio Online (zoom)</a>
+    <a href="paginas/cartanatal.html#informe-escrito-id"> Informe Escrito</a>
+    <a href="paginas/cartanatal.html#informe-online-id">Servicio Online (zoom)</a>
   </div>
 </section>
 
@@ -117,21 +120,21 @@
         <img src="img/conociendo-pluton.jpg" class="conociendo-pluton" alt="tarjeta de pluton">
         <div class="carousel-caption d-none d-md-block">
           <h5>El Planeta de la Transformación</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+          <p>Plutón nos remite a esa parte tan profunda dentro nuestro, que a veces ni nosotrxs sabemos que cosas guardamos ahí (a veces a drede y otras nos olvidamos). Pero, ¿qué pasa si le damos luz a nuestras sombras mas oscuras?. Te invito a que leas éste artículo que seguro te va a gustar...</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="img/conociendo-jupiter.jpg" class="conociendo-jupiter" alt="tarjeta de jupiter">
         <div class="carousel-caption d-none d-md-block">
           <h5>Hablemos de expandirnos</h5>
-          <p>Some representative placeholder content for the second slide.</p>
+          <p>Júpiter, la gran lupa que maximiza todo lo que toca, lo bueno y lo no tan bueno. A veces se nos va la mano en energía, acciones y traen sus consecuencias. ¿qué pasa cuando tenemos muy internalizado que cuanto mas es mejor? ¿como balanceamos ésta energía que parece tan tan buena, dentro nuestro?...</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="img/conociendo-luna.jpg" class="conociendo-luna" alt="tarjeta de la luna">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+          <h5>Los mecanismos defensivos internos</h5>
+          <p>Nuestra gran luminaria, que nos mueve los hilos desde el inconsciente. Hermosa, cambiante, movediza, oculta y visible. ¿por qué es tan importante el papel que juega en nuestra carta? ¿es verdad que nos influye tanto en nuestra vida diaria?...</p>
         </div>
       </div>
     </div>
