--- a/paginas/astro101.html
+++ b/paginas/astro101.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- link de font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <!-- otro link de font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <!-- otro link de font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk&display=swap" rel="stylesheet">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- Animate on scroll CSS-->
@@ -30,11 +36,11 @@
         <header class="header-astrox">
           <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html">
-                <img class="logo-astrox" src="../img/logoastrox.png" alt=" logo astro x"> </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
               </button>
+              <a class="navbar-brand" href="../index.html">
+                <img class="logo-astrox" src="../img/logoastrox.png" alt=" logo astro x"> </a>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
@@ -48,9 +54,6 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link " href="../paginas/talleres.html">Cursos y Talleres</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " href="../paginas/blog.html">Blog</a>
                   </li>
               </div>
             </div>
@@ -82,17 +85,17 @@
         <div id="pluton" class="pluton-101" data-aos="flip-right" data-aos-delat="1000" data-aos-duration="1000">
             <h2>El planeta de la profundidad y transformación:</h2>
             <img src="../img/conociendo-pluton.jpg" alt="tarjeta de planeta plutón">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam hic officia corrupti suscipit fugit sit rerum, inventore amet unde architecto,accusantium iure sed fuga eaque necessitatibus nam earum. Vitae, recusandae.<a href="../paginas/pluton.html" target="blank">Seguir leyendo...</a></p>
+            <p>Plutón nos remite a esa parte tan profunda dentro nuestro, que a veces ni nosotrxs sabemos que cosas guardamos ahí (a veces a drede y otras nos olvidamos). Pero, ¿qué pasa si le damos luz a nuestras sombras mas oscuras?. Te invito a que leas éste artículo que seguro te va a gustar....<a href="../paginas/pluton.html" target="blank">Seguir leyendo...</a></p>
          </div>
          <div id="jupiter" class="jupiter-101" data-aos="flip-left" data-aos-delat="500" data-aos-duration="1000">
             <h2>Júpiter, el planeta que agranda todo lo que toca: </h2>
              <img src="../img/conociendo-jupiter.jpg" alt="tarjeta de planeta plutón">
-             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam hic officia corrupti suscipit fugit sit rerum, inventore amet unde architecto,          accusantium iure sed fuga eaque necessitatibus nam earum. Vitae, recusandae.<a href="" target="blank">Seguir leyendo...</a></p>
+             <p>Júpiter, la gran lupa que maximiza todo lo que toca, lo bueno y lo no tan bueno. A veces se nos va la mano en energía, acciones y traen sus consecuencias. ¿qué pasa cuando tenemos muy internalizado que cuanto mas es mejor? ¿como balanceamos ésta energía que parece tan tan buena, dentro nuestro?...<a href="" target="blank">Seguir leyendo...</a></p>
          </div>
          <div id="luna" class="luna-101" data-aos="flip-right" data-aos-delat="500" data-aos-duration="1000">
             <h2>La Luna y nuestros mecanismos inconscientes:</h2>
              <img src="../img/conociendo-luna.jpg" alt="tarjeta de planeta plutón">
-             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam hic officia corrupti suscipit fugit sit rerum, inventore amet unde architecto,accusantium iure sed fuga eaque necessitatibus nam earum. Vitae, recusandae. <a href="" target="blank">Seguir leyendo...</a></p>
+             <p>Nuestra gran luminaria, que nos mueve los hilos desde el inconsciente. Hermosa, cambiante, movediza, oculta y visible. ¿por qué es tan importante el papel que juega en nuestra carta? ¿es verdad que nos influye tanto en nuestra vida diaria?...<a href="" target="blank">Seguir leyendo...</a></p>
          </div>
     </main>
     <footer>
