se corrigieron detalles de responsive, se achicaron imagenes, textos y se esta agregando un boton para ir a arrib

--- a/paginas/sobremi.html
+++ b/paginas/sobremi.html
@@ -23,8 +23,7 @@
       <img src="../img/logoastrox.png" alt="logo astro x "> 
     </a>
     <p class="hablemos"> ¡Hablemos!</p>
-  
-  </div>
+  </div> <!-- boton de wpp final-->
         <div class="contenedor-menu">
             <header class="header-astrox">
               <nav class="navbar navbar-expand-lg">
@@ -59,11 +58,11 @@
         <h1> ¡Bienvenidxs, yo soy Eric!</h1>
         <div class="big3">
             <img src="../img/sol.png" alt=" simbolo del sol">
-            <p>Sol en Cáncer</p>
+            <p>Cáncer</p>
             <img src="../img/luna.png" alt=" simbolo de la luna">
-            <p>Luna en Leo</p>
+            <p class="p-luna-leo">Leo</p>
             <img src="../img/Ascendente.png" alt=" simbolo de ascendente">
-            <p class="asc-geminis">Asc en Géminis</p>
+            <p class="asc-geminis"> Géminis</p>
         </div>
         <div id="historia-mia-id" class="historia-mia">
           <h2 class="h2-historia"> Ponganse cómodxs, que les cuento un poco de mi historia..</h2>
