--- a/index.html
+++ b/index.html
@@ -18,14 +18,22 @@
 </head>
 <body>
   <video src="img/video-fondo.mp4" autoplay loop muted></video>
+  <!-- boton wpp-->
   <div class="boton-wpp">
     <a href="https://api.whatsapp.com/send?phone=542915660864" class="whatsapp" target="_blank">
       <img src="img/logoastrox.png" alt="logo astro x "> 
     </a>
     <p class="hablemos"> ¡Hablemos!</p>
   </div>
+  <!-- boton arriba-->
+  <div class="boton-arriba">
+    <a href="#header" class="imagen-arriba">
+      <img src="img/arriba.png" alt="boton arriba"> 
+    </a>
+    <p class="arriba"> Arriba</p>
+  </div>
 <!-- Aca esta el menu de bs-->
-  <div class="contenedor-menu">
+  <div id="header" class="contenedor-menu">
     <header class="header-astrox">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
