se corrigieron textos

--- a/paginas/sobremi.html
+++ b/paginas/sobremi.html
@@ -61,7 +61,7 @@
             <p>Cáncer</p>
             <img src="../img/luna.png" alt=" simbolo de la luna">
             <p class="p-luna-leo">Leo</p>
-            <img src="../img/Ascendente.png" alt=" simbolo de ascendente">
+            <img src="../img/ascendente.png" alt=" simbolo de ascendente">
             <p class="asc-geminis"> Géminis</p>
         </div>
         <div id="historia-mia-id" class="historia-mia">
