se corrigio el desplazamiento horizontal en mobile version

--- a/paginas/astro101.html
+++ b/paginas/astro101.html
@@ -20,10 +20,10 @@
 </head>
 <body>
     <!-- Js de Animate on scroll-->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <script>
+          AOS.init();
+      </script>
     <video src="../img/video-fondo.mp4" autoplay loop muted></video>
     <div class="boton-wpp">
       <a href="https://api.whatsapp.com/send?phone=542915660864" class="whatsapp" target="_blank">
@@ -82,17 +82,17 @@
             <li><a href="">Marte</a></li>
           </ul>
         </div>
-        <div id="pluton" class="pluton-101" data-aos="flip-right" data-aos-delat="1000" data-aos-duration="1000">
+        <div id="pluton" class="pluton-101" data-aos="fade-right" data-aos-delat="1000" data-aos-duration="1000">
             <h2>El planeta de la profundidad y transformación:</h2>
             <img src="../img/conociendo-pluton.jpg" alt="tarjeta de planeta plutón">
             <p>Plutón nos remite a esa parte tan profunda dentro nuestro, que a veces ni nosotrxs sabemos que cosas guardamos ahí (a veces a drede y otras nos olvidamos). Pero, ¿qué pasa si le damos luz a nuestras sombras mas oscuras?. Te invito a que leas éste artículo que seguro te va a gustar....<a href="../paginas/pluton.html" target="blank">Seguir leyendo...</a></p>
          </div>
-         <div id="jupiter" class="jupiter-101" data-aos="flip-left" data-aos-delat="500" data-aos-duration="1000">
+         <div id="jupiter" class="jupiter-101" data-aos="fade-left" data-aos-delat="500" data-aos-duration="1000">
             <h2>Júpiter, el planeta que agranda todo lo que toca: </h2>
              <img src="../img/conociendo-jupiter.jpg" alt="tarjeta de planeta plutón">
              <p>Júpiter, la gran lupa que maximiza todo lo que toca, lo bueno y lo no tan bueno. A veces se nos va la mano en energía, acciones y traen sus consecuencias. ¿qué pasa cuando tenemos muy internalizado que cuanto mas es mejor? ¿como balanceamos ésta energía que parece tan tan buena, dentro nuestro?...<a href="" target="blank">Seguir leyendo...</a></p>
          </div>
-         <div id="luna" class="luna-101" data-aos="flip-right" data-aos-delat="500" data-aos-duration="1000">
+         <div id="luna" class="luna-101" data-aos="fade-right" data-aos-delat="500" data-aos-duration="1000">
             <h2>La Luna y nuestros mecanismos inconscientes:</h2>
              <img src="../img/conociendo-luna.jpg" alt="tarjeta de planeta plutón">
              <p>Nuestra gran luminaria, que nos mueve los hilos desde el inconsciente. Hermosa, cambiante, movediza, oculta y visible. ¿por qué es tan importante el papel que juega en nuestra carta? ¿es verdad que nos influye tanto en nuestra vida diaria?...<a href="" target="blank">Seguir leyendo...</a></p>
