se trabajo en el boton de scroll up

--- a/paginas/pluton.html
+++ b/paginas/pluton.html
@@ -21,11 +21,18 @@
 <body>
     <video src="../img/video-fondo.mp4" autoplay loop muted></video>
     <div class="boton-wpp">
-      <a href="https://api.whatsapp.com/send?phone=542915660864" class="whatsapp" target="_blank">
+      <a href="https://api.whatsapp.com/send?phone=542914972306" class="whatsapp" target="_blank">
         <img src="../img/logoastrox.png" alt="logo astro x "> 
       </a>
       <p class="hablemos"> ¡Hablemos!</p>
     </div>
+    <!-- boton arriba-->
+  <div class="boton-arriba">
+    <a href="#header" class="imagen-arriba">
+      <img src="../img/arriba.png" alt="boton arriba"> 
+    </a>
+    <p class="arriba"> Arriba</p>
+  </div>
     <!-- Header..........-->
     <div class="contenedor-menu">
         <header class="header-astrox">
