--- a/paginas/talleres.html
+++ b/paginas/talleres.html
@@ -21,14 +21,21 @@
 <body>
     <video src="../img/video-fondo.mp4" autoplay loop muted></video>
     <div class="boton-wpp">
-      <a href="https://api.whatsapp.com/send?phone=542915660864" class="whatsapp" target="_blank">
+      <a href="https://api.whatsapp.com/send?phone=542914972306" class="whatsapp" target="_blank">
         <img src="../img/logoastrox.png" alt="logo astro x "> 
       </a>
       <p class="hablemos"> ¡Hablemos!</p>
     </div>
+    <!-- boton arriba-->
+  <div class="boton-arriba">
+    <a href="#header-4" class="imagen-arriba">
+      <img src="../img/arriba.png" alt="boton arriba"> 
+    </a>
+    <p class="arriba"> Arriba</p>
+  </div>
     <!-- Header..........-->
     <div class="contenedor-menu">
-        <header class="header-astrox">
+        <header id="header-4" class="header-astrox">
           <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
