se corrigieron enlaces

--- a/paginas/cartanatal.html
+++ b/paginas/cartanatal.html
@@ -79,7 +79,7 @@
         <!-- Principio del widget de enlace de Calendly -->
         <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
         <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-        <h2 class="h2-carta-revo"><a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/astrox/carta-natal-revo'});return false;">Carta Natal + Revolución Solar (Online)</a></h2>
+        <h2 class="h2-carta-online"><a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/astrox/lectura-de-carta-natal'});return false;">Carta Natal + Revolución Solar (Online)</a></h2>
         <p class="texto-carta-revo"> A la sesión de carta natal le sumamos la lectura de Revolución Solar, que nos muestra las energías que te van a acompañar durante todo el año (Tomando como referencia el dia de tu cumpleaños, para ver la posición de los planetas).Es una excelente herramienta para saber con que energías podemos contar y trabajar en ese año específico.</p>
     </div>
     <div class="carta-escrita">
