se cambio la flecha de arriba, se trabajo con SEO

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="¿Querés saber que energías hay dentro tuyo? .Te invito a reconectarte con vos y con el mundo a traves de la maravillosa herramienta que es la Astrología.">
+    <meta name="keywords" content=" ASTROLOGÍA, SERVICIOS ASTROLÓGICOS, CARTA NATAL, CURSOS DE ASTROLOGIA, TALLERES DE ASTROLOGIA, VIDEOS DE ASTROLOGIA, INFORMACIÓN DE ASTROLOGÍA, INFORME ESCRITO DE CARTA NATAL, INFORME ONLINE DE CARTA NATAL, LECTURAS DE CARTA NATAL, TALLER DE LA LUNA ASTROLOGÍA, APRENDER ASTROLOGÍA"  >
+
     <!-- link de font-->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital@1&display=swap" rel="stylesheet">
     <!-- otro link de font-->
@@ -14,7 +17,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- link css-->
     <link rel="stylesheet" href="css/styles.css">
-    <title>Astro X</title>
+    <title>Home</title>
 </head>
 <body>
   <video src="img/video-fondo.mp4" autoplay loop muted></video>
@@ -28,9 +31,8 @@
   <!-- boton arriba-->
   <div class="boton-arriba">
     <a href="#header" class="imagen-arriba">
-      <img src="img/arriba.png" alt="boton arriba"> 
+      <img src="img/arrow.svg" alt="boton arriba"> 
     </a>
-    <p class="arriba"> Arriba</p>
   </div>
 <!-- Aca esta el menu de bs-->
   <div id="header" class="contenedor-menu">
