--- a/paginas/cartanatal.html
+++ b/paginas/cartanatal.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="¿Querés saber que energías hay dentro tuyo?. Con nuestros informes online y escritos, te contamos como es tu carta, que energías te operan y como aprovecharlas.">
+    <meta name="keywords" content="LECTURA DE CARTA NATAL, LECTURA DE CARTA NATAL MAS REVOLUCION SOLAR, LECTURA DE CARTA NATAL ONLINE, LECTURA DE CARTA NATAL ESCRITA, CONOCE TU CARTA ASTRAL, DESCUBRI TU CARTA ASTRAL, CONOCE TU CARTA NATAL, INFORMACION DE TU CARTA NATAL Y ASTRAL, SERVICIOS DE ASTROLOGIA"  >
     <!-- link de font-->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <!-- otro link de font-->
@@ -28,9 +30,8 @@
 <!-- boton arriba-->
 <div class="boton-arriba">
   <a href="#header-3" class="imagen-arriba">
-    <img src="../img/arriba.png" alt="boton arriba"> 
+    <img src="../img/arrow.svg" alt="boton arriba"> 
   </a>
-  <p class="arriba"> Arriba</p>
 </div>
 <!--------------- header---------------->
 <div class="contenedor-menu">
