--- a/paginas/pluton.html
+++ b/paginas/pluton.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Plutón, el planeta de la transformación explicado a fondo.">
+    <meta name="keywords" content="PLUTON EN LA MITOLOGIA, PLUTON EN ASTROLOGIA, INFO DE PLUTON, PLUTON Y LA TRANSFORMACION, SER PLUTONIANO, PLUTON COMO PLANETA DOMINANTE, PLUTON ES ESCORPIO, PLUTON Y LAS GENERACIONES, PLUTON EN LA CARTA NATAL, PLUTON Y EL TABU, LUZ Y SOMBRA"  >
     <!-- link de font-->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <!-- otro link de font-->
@@ -29,9 +31,8 @@
     <!-- boton arriba-->
   <div class="boton-arriba">
     <a href="#header" class="imagen-arriba">
-      <img src="../img/arriba.png" alt="boton arriba"> 
+      <img src="../img/arrow.svg" alt="boton arriba"> 
     </a>
-    <p class="arriba"> Arriba</p>
   </div>
     <!-- Header..........-->
     <div class="contenedor-menu">
