--- a/paginas/sobremi.html
+++ b/paginas/sobremi.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Conocé la historia que hay detrás de Astro X y respondé a la pregunta ¿Por qué Astrología?">
+    <meta name="keywords" content=" MI CARTA NATAL, CONOOCIENDO ASTRO X, INFORMACION DE ASTRO X, CARTA DE ASTRO X, BIG 3 ASTRO X, ASTRO X ERIC DALLAS, HISTORIA DE ASTRO X, ASTROLOGIA ASTRO X "  >
     <!-- link de font-->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <!-- otro link de font-->
@@ -27,9 +29,8 @@
   <!-- boton arriba-->
   <div class="boton-arriba">
     <a href="#header-2" class="imagen-arriba">
-      <img src="../img/arriba.png" alt="boton arriba"> 
+      <img src="../img/arrow.svg" alt="boton arriba"> 
     </a>
-    <p class="arriba"> Arriba</p>
   </div>
         <div class="contenedor-menu">
             <header id="header-2"  class="header-astrox">
