--- a/paginas/talleres.html
+++ b/paginas/talleres.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content=" En nuestros cursos y talleres, vas a aprender todo lo que necesites del mundo astrológico para seguir tu camino de autodescubrimiento">
+    <meta name="keywords" content=" TALLER DE ASTROLOGIA, TALLER DE LA LUNA NATAL EN ASTROLOGIA, TALLER DE VENUS NATAL ASTROLOGIA, TALLER MARTE NATAL ASTROLOGIA, TALLER DE ASCENDENTE ASTROLOGIA, CURSOS DE ASTROLOGIA, VENUS, ASCENDENTE, LUNA, MARTE, LUNA POR SIGNOS, LUNA POR ELEMENTO, LUNA POR CASAS, MARTE POR SIGNO, MARTE POR ELEMENTO, MARTE POR CASAS, VENUS POR SIGNO, VENUS POR ELEMENTO, VENUS POR CASAS, ASCENDENTE POR SIGNO, ASCENDENTE POR ELEMENTOS "  >
     <!-- link de font-->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <!-- otro link de font-->
@@ -29,9 +31,8 @@
     <!-- boton arriba-->
   <div class="boton-arriba">
     <a href="#header-4" class="imagen-arriba">
-      <img src="../img/arriba.png" alt="boton arriba"> 
+      <img src="../img/arrow.svg" alt="boton arriba"> 
     </a>
-    <p class="arriba"> Arriba</p>
   </div>
     <!-- Header..........-->
     <div class="contenedor-menu">
