--- a/paginas/astro101.html
+++ b/paginas/astro101.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Te contamos todo lo que necesitás saber sobre el mundo de Astrología, con nuestros artículos dedicados para que sigas aprendiendo.">
+    <meta name="keywords" content="APRENDER ASTROLOGIA, INFORMACION DE PLUTON, PLUTON EN ASTROLOGIA, INFORMACION DE JUPITER, JUPITER EN ASTROLOGIA, INFORMACION DE LA LUNA EN ASTROLOGIA, LA LUNA EN ASTROLOGIA,
+    ASTRO DATA "  >
     <!-- link de font-->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <!-- otro link de font-->
@@ -34,9 +37,8 @@
     <!-- boton arriba-->
   <div class="boton-arriba">
     <a href="#header-5" class="imagen-arriba">
-      <img src="../img/arriba.png" alt="boton arriba"> 
+      <img src="../img/arrow.svg" alt="boton arriba"> 
     </a>
-    <p class="arriba"> Arriba</p>
   </div>
     <!-- Header..........-->
     <div class="contenedor-menu">
