se esta trabajando en un boton dropdown

--- a/index.html
+++ b/index.html
@@ -46,11 +46,18 @@
             <img class="logo-astrox" src="img/logoastrox.png" alt=" logo astro x"> </a>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
+              <div class="dropdown-center" >
+                <a class="btn btn-dark btn-sm dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Servicios
+                </a>
+                <ul class="dropdown-menu">
+                  <li class="nav-item">
+                    <a class="dropdown-item" href="paginas/cartanatal.html">Carta Natal</a></li>
+                  <li><a class="dropdown-item" href="https://www.astro.com/cgi/genchart.cgi?&lang=s" target="blank">Calcula tu Carta</a></li>
+                </ul>
+              </div>
               <li class="nav-item">
                 <a class="nav-link " href="paginas/sobremi.html">Sobre Mi</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link " href="paginas/cartanatal.html">Carta Natal</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link " href="paginas/talleres.html">Cursos y Talleres</a>
