se trabajo en un articulo y se le dio responsive design

--- a/paginas/cartanatal.html
+++ b/paginas/cartanatal.html
@@ -22,7 +22,7 @@
 <body>
     <video src="../img/video-fondo.mp4" autoplay loop muted></video>
     <div class="boton-wpp">
-      <a href="https://api.whatsapp.com/send?phone=542914972306" class="whatsapp" target="_blank">
+      <a href="https://api.whatsapp.com/send?phone=542915660864" class="whatsapp" target="_blank">
         <img src="../img/logoastrox.png" alt="logo astro x "> 
       </a>
       <p class="hablemos"> ¡Hablemos!</p>
@@ -50,6 +50,9 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link " href="../paginas/sobremi.html">Sobre Mi</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="https://www.astro.com/cgi/genchart.cgi?&lang=s" target="blank">Calcula tu Carta</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link " href="../paginas/talleres.html">Cursos y Talleres</a>
@@ -97,6 +100,7 @@
     <img src="../img/pregunta.png" alt="imagen signo de pregunta">
     <h3 class="preguntas"> ¿Dudas?</h3>
   </div>
+  
   <h4 class="pregunta-1"> ¿Para que me sirve conocer mi Carta Natal?</h4>
   <p>Nuestra Carta Natal, es la puerta de acceso a un conocimiento propio muy profundo. En ella podemos ver las energías que nos mueven y operan, tomando conciencia de ellas, para poder utilizarlas a nuestro favor en un futuro, aprendiendo a transformarnos y salir de la repetición de situaciones. Es importante entender, que nuesto proceso de vida está atravesado por un sín fín de experiencias, que tienen como fin último nuestra propia trascendencia y constante evolución. Es propio del Ser Humano vivir cambiando y moviendonos, pero a veces parece que nos olvidamos, y nos quedamos atascados con las mismas situaciones, actitudes, personas, etc. La Astrología brinda una poderosa herramienta, para que realmente empieces a darle luz a todos tus patrones, entendiendote muchísimo mejor y dándote la posibilidad de elegir concientemente.</p>
   <h4 class="pregunta-2"> ¿La sesión Online queda grabada?</h4>
