--- a/paginas/sobremi.html
+++ b/paginas/sobremi.html
@@ -21,7 +21,7 @@
 <body>
   <video src="../img/video-fondo.mp4" autoplay loop muted></video>
   <div class="boton-wpp">
-    <a href="https://api.whatsapp.com/send?phone=542914972306" class="whatsapp" target="_blank">
+    <a href="https://api.whatsapp.com/send?phone=542915660864" class="whatsapp" target="_blank">
       <img src="../img/logoastrox.png" alt="logo astro x "> 
     </a>
     <p class="hablemos"> ¡Hablemos!</p>
@@ -48,6 +48,9 @@
                       </li>
                       <li class="nav-item">
                         <a class="nav-link " href="../paginas/cartanatal.html">Carta Natal</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="https://www.astro.com/cgi/genchart.cgi?&lang=s" target="blank">Calcula tu Carta</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link " href="../paginas/talleres.html">Cursos y Talleres</a>
