--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <video src="img/video-fondo.mp4" autoplay loop muted></video>
   <!-- boton wpp-->
   <div class="boton-wpp">
-    <a href="https://api.whatsapp.com/send?phone=542914972306" class="whatsapp" target="_blank">
+    <a href="https://api.whatsapp.com/send?phone=542915660864" class="whatsapp" target="_blank">
       <img src="img/logoastrox.png" alt="logo astro x "> 
     </a>
     <p class="hablemos"> ¡Hablemos!</p>
@@ -46,18 +46,14 @@
             <img class="logo-astrox" src="img/logoastrox.png" alt=" logo astro x"> </a>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-              <div class="dropdown-center" >
-                <a class="btn btn-dark btn-sm dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Servicios
-                </a>
-                <ul class="dropdown-menu">
-                  <li class="nav-item">
-                    <a class="dropdown-item" href="paginas/cartanatal.html">Carta Natal</a></li>
-                  <li><a class="dropdown-item" href="https://www.astro.com/cgi/genchart.cgi?&lang=s" target="blank">Calcula tu Carta</a></li>
-                </ul>
-              </div>
               <li class="nav-item">
                 <a class="nav-link " href="paginas/sobremi.html">Sobre Mi</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="paginas/cartanatal.html">Carta Natal</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://www.astro.com/cgi/genchart.cgi?&lang=s" target="blank">Calcula tu Carta</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link " href="paginas/talleres.html">Cursos y Talleres</a>
