--- a/paginas/talleres.html
+++ b/paginas/talleres.html
@@ -23,7 +23,7 @@
 <body>
     <video src="../img/video-fondo.mp4" autoplay loop muted></video>
     <div class="boton-wpp">
-      <a href="https://api.whatsapp.com/send?phone=542914972306" class="whatsapp" target="_blank">
+      <a href="https://api.whatsapp.com/send?phone=542915660864" class="whatsapp" target="_blank">
         <img src="../img/logoastrox.png" alt="logo astro x "> 
       </a>
       <p class="hablemos"> ¡Hablemos!</p>
@@ -54,6 +54,9 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link " href="../paginas/cartanatal.html">Carta Natal</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="https://www.astro.com/cgi/genchart.cgi?&lang=s" target="blank">Calcula tu Carta</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link " href="../paginas/astro101.html">Astro 101</a>
@@ -93,6 +96,7 @@
       <p>Afrodita, la diosa del amor y el deseo, representada por Venus en nuestra carta. Cuándo hablamos de relaciones vinculares es ella quien entra en juego, la que nos habla de como es mi vínculo con el otrx, que necesito yo para sentirme deseado y satisfecho a un nivel físico y energético, que cosas le estoy pidiendo a ese otrx que no me puedo pedir a mi mismx.¿Que pasa si empiezo a entender como son mis juegos vinculares?. El primer paso es cuestionarse. Cuando vemos los patrones que subyacen en mi, puedo elegir desde donde me voy a relacionar con otrxs y romper con las repeticiones.</p>
     </div>
    </div>
+   
 </main>
     <footer>
        <!-- footer mobile-->
@@ -109,7 +113,7 @@
             <img src="../img/youtubelogo.png" alt="youtube logo">
           </a>
         </div>
-        <p class="derechos"> Todos los derechos reservados. Creado por <a href="https://instagram.com/eric.dallas" target="blank">Eric       Dallas</a> </p>
+        <p class="derechos"> Todos los derechos reservados. Creado por <a href="https://instagram.com/eric.dallas" target="blank">Eric Dallas</a> </p>
       </div>
       <!-- footer desktop-->
         <div class="footer-contenedor">
